--- a/templates/index2.html
+++ b/templates/index2.html
@@ -40,6 +40,9 @@
             
                     <label for="email">Email Address (@juitsolan.in)</label>
                     <input type="email" id="email" name="email" required>
+
+                    <label for="parent_email">Parent's Email</label>
+                    <input type="parent_email" id="parent_mail" name="parent_email" required>
             
                     <label for="registerPassword">Password</label>
                     <input type="password" id="registerPassword" name="password" required>
